--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ img {
     
 }
 
-.header {
+.header, .footer {
     display: flex;
     justify-content: space-around;
     color: white;
@@ -40,6 +40,16 @@ img {
     border-radius: 6px;
     width: 110px;
     height: 30px;
+}
+
+.button2 {
+    background-color: #3882F6;
+    color: white;
+    border: 2px solid white;
+    border-radius: 6px;
+    width: 110px;
+    height: 30px;
+    font-weight: 700;
 }
 
 .title {
@@ -135,4 +145,36 @@ a {
     text-align: right;
     font-weight: 900;
     font-size: 26px;
+}
+
+.section4 {
+    display: flex;
+    justify-content: center;
+}
+
+.signup {
+    color: white;
+    background-color: #3882F6;
+    border: 1px solid #3882F6;
+    border-radius: 6px;
+    margin: 5%;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.container2 {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 20px;
+    height: 80px;
+    min-width: 800px;
+}
+
+h3, h5 {
+    margin: 0;
+}
+
+h5 {
+    font-weight: 100;
 }
